# TFG-UnitreeGO2

./: .gitignore  LICENSE  README.md  comandos.txt
go2_vr/: README.md  package.xml  setup.cfg  setup.py
go2_vr/go2_vr/pc/: image_compressor_left.py  image_compressor_right.py
go2_vr/go2_vr/robot/: cmd_vel_request.py  stereo_publisher.py
go2_vr/launch/: pc.launch.py  robot.launch.py
realsense/raw/: IRmonochrome.py  alignment&VisualizerFilters.py  virtualCamera.py
realsense/ros/: cmd_vel_request_node.py  imageReceptor.py  image_compressor_left.py  image_compressor_right.py  stereo_disparity_publisher.py  stereo_virtual_publisher_open3d.py
unity/: CmdVelPublisher.cs  CompressedImageSubscriberLeft.cs  CompressedImageSubscriberRight.cs
